Fixes broken social widget styling on the documentation css. Adds test spacing classes.

--- a/less/modules/mixins.less
+++ b/less/modules/mixins.less
@@ -795,6 +795,86 @@
                     margin-left: @gutter-width;
                     margin-right: @gutter-width;
                 }
+
+                .vertical-space {
+                    margin-top: @gutter-width;
+                    margin-bottom: @gutter-width;
+                }
+
+                .half-vertical-space {
+                    margin-top: (@gutter-width/2);
+                    margin-bottom: (@gutter-width/2);
+                }
+
+                .quarter-vertical-space {
+                    margin-top: (@gutter-width/4);
+                    margin-bottom: (@gutter-width/4);
+                }
+
+                .horizontal-space {
+                    margin-left: @gutter-width;
+                    margin-right: @gutter-width;
+                }
+
+                .half-horizontal-space {
+                    margin-left: (@gutter-width/2);
+                    margin-right: (@gutter-width/2);
+                }
+
+                .quarter-horizontal-space {
+                    margin-left: (@gutter-width/4);
+                    margin-right: (@gutter-width/4);
+                }
+
+                .top-space {
+                    margin-top: @gutter-width;
+                }
+
+                .half-top-space {
+                    margin-top: (@gutter-width/2);
+                }
+
+                .quarter-top-space {
+                    margin-top: (@gutter-width/4);
+                }
+
+                .right-space {
+                    margin-right: @gutter-width;
+                }
+
+                .half-right-space {
+                    margin-right: (@gutter-width/2);
+                }
+
+                .quarter-right-space {
+                    margin-right: (@gutter-width/4);
+                }
+
+                .bottom-space {
+                    margin-bottom: @gutter-width;
+                }
+
+                .half-bottom-space {
+                    margin-bottom: (@gutter-width/2);
+                }
+
+                .quarter-bottom-space {
+                    margin-bottom: (@gutter-width/4);
+                }
+
+                .left-space {
+                    margin-left: @gutter-width;
+                }
+
+                .half-left-space {
+                    margin-left: (@gutter-width/2);
+                }
+
+                .quarter-left-space {
+                    margin-left: (@gutter-width/4);
+                }
+
+
             }
 
         }
